# sudoku-core

./: Cargo.toml  LICENSE
.github/workflows/: ci.yml
examples/: README.md
src/: generator.rs  hash.rs  lib.rs
src/solver/: SPECIFICATION.md  aic_engine.rs  als_engine.rs  backtrack.rs  basic.rs  explain.rs  mod.rs  types.rs
